--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
     <table width="600" border="0" padding="5" >
       <tbody>
         <tr>
-          <td><img src="images/CNG-Cars.jpeg" width="300" height="200" alt="CNG Services"/></td>
-          <td><img src="images/autorepair.jpeg" width="300" height="200" alt="Auto Repair Services"/></td>
+          <td><img src="https://www.autotekservices.com/images/CNG-Cars.jpeg" width="300" height="200" alt="CNG Services"/></td>
+          <td><img src="https://www.autotekservices.com/images/autorepair.jpeg" width="300" height="200" alt="Auto Repair Services"/></td>
         </tr>
         
       </tbody>
