--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
   <div class="header">
     <table width="100%" border="0">
       <tr>
-        <td width="18%"><img src="images/autoteklogo.jpeg" width="150" height="127" alt=""/></td>
+        <td width="18%"><img src="https://www.autotekservices.com/images/autoteklogo.jpeg" width="150" height="127" alt=""/></td>
         <td width="48%" align="center"><h1>Autotek Services</h1></td>
         <td width="34%" align="center"><h3>Serving the Entire Bay Area
           <br />
@@ -227,7 +227,7 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
          <table width="600" border="0">
            <tbody>
              <tr>
-               <td><p><strong><a href="specials.html"><img src="images/monthlyspecialsblue.png" width="301" height="168" alt=""/></a></strong></p></td>
+               <td><p><strong><a href="specials.html"><img src="https://www.autotekservices.com/images/monthlyspecialsblue.png" width="301" height="168" alt=""/></a></strong></p></td>
                <td><strong>Click here for the <a href="specials.html">September Maintenance Special</a></strong></td>
              </tr>
            </tbody>
